# video_serve

./: .env.example  .gitignore  Cargo.toml  Readme.md  main.go
conf/: app.conf
controllers/: object.go  user.go  video.go
models/: video.go
routers/: router.go
src/: main.rs
src/common/: mod.rs  p.rs  req.rs  res.rs
src/controller/: detail.rs  home.rs  list.rs  mod.rs
src/model/: video.rs
src/router/: mod.rs  route.rs
tests/: default_test.go
